objects/CDE_Feedback__c.object
<CustomObject><fields>
        <fullName>CDE_Feedback_Review__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CDE Feedback Review</label>
        <referenceTo>CDE_Feedback_Review__c</referenceTo>
        <relationshipLabel>CDE Feedback</relationshipLabel>
        <relationshipName>CDE_Feedback</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields><fields>
        <fullName>External_ID__c</fullName>
        <formula>UIP__r.Id &amp; Feedback_Year__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>External ID</label>
        <type>Text</type>
    </fields><fields>
        <fullName>FeedbackSummary__c</fullName>
        <label>FeedbackSummary</label>
        <length>5000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Feedback_Question1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Feedback_Question1</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Feedback_Question2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Feedback_Question2</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Feedback_Question3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Feedback_Question3</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Feedback_Year__c</fullName>
        <label>Feedback Year</label>
        <length>10</length>
        <type>Text</type>
    </fields><fields>
        <fullName>FinalFeedbackCategory__c</fullName>
        <label>FinalFeedbackCategory</label>
        <picklist>
            <picklistValues>
                <fullName>Re-Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Required Changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recommended Changes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>FinalFeedbackDetermination__c</fullName>
        <label>FinalFeedbackDetermination</label>
        <length>5000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Level1_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Level1 Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CDE_Feedback</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Level2_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Level2 Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CDE_Feedback1</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Level3_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Level3 Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>CDE_Feedback2</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Rubric_Feedback_Q1__c</fullName>
        <label>Rubric_Feedback_Q1</label>
        <picklist>
            <picklistValues>
                <fullName>Meets Expectations at a High Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meets Expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Meets Expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expectations Not Met</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Rubric_Feedback_Q2__c</fullName>
        <label>Rubric_Feedback_Q2</label>
        <picklist>
            <picklistValues>
                <fullName>Meets Expectations at a High Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meets Expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Meets Expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expectations Not Met</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Rubric_Feedback_Q3__c</fullName>
        <label>Rubric_Feedback_Q3</label>
        <picklist>
            <picklistValues>
                <fullName>Meets Expectations at a High Level</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meets Expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Meets Expectations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expectations Not Met</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Sec01DRFeedback__c</fullName>
        <label>Sec01DRFeedback</label>
        <length>10000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Sec01DRReqchange__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sec01DRReqchange</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Sec01Feedback__c</fullName>
        <label>Sec01Feedback</label>
        <length>10000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Sec01FocusFeedback__c</fullName>
        <label>Sec01FocusFeedback</label>
        <length>10000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Sec01FocusReqchange__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sec01FocusReqchange</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Sec01LastYearAddressed__c</fullName>
        <label>Sec01LastYearAddressed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partially</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Sec01READFeedback__c</fullName>
        <label>Sec01READFeedback</label>
        <length>10000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Sec01READReqchange__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sec01READReqchange</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Sec01Reqchange__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sec01Reqchange</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Sec01SAPFeedback__c</fullName>
        <label>Sec01SAPFeedback</label>
        <length>10000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Sec01SAPReqchange__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sec01SAPReqchange</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Sec01SCTRFeedback__c</fullName>
        <label>Sec01SCTRFeedback</label>
        <length>10000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Sec01SCTRReqchange__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sec01SCTRReqchange</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Sec01SISFeedback__c</fullName>
        <label>Sec01SISFeedback</label>
        <length>10000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Sec01SISReqchange__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sec01SISReqchange</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Sec01_21Feedback__c</fullName>
        <label>Sec01_21Feedback</label>
        <length>10000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Sec01_21Reqchange__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sec01_21Reqchange</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Sec02Feedback__c</fullName>
        <label>Sec02Feedback</label>
        <length>10000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Sec02LastYearAddressed__c</fullName>
        <label>Sec02LastYearAddressed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partially</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Sec02Reqchange__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sec02Reqchange</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Sec03EnoughChangeFeedback__c</fullName>
        <label>Sec03EnoughChangeFeedback</label>
        <length>10000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Sec03EnoughChangeReqchange__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sec03EnoughChangeReqchange</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Sec03Feedback__c</fullName>
        <label>Sec03Feedback</label>
        <length>10000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Sec03LastYearAddressed__c</fullName>
        <label>Sec03LastYearAddressed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partially</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Sec03Reqchange__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sec03Reqchange</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Sec03SISFeedback__c</fullName>
        <label>Sec03SISFeedback</label>
        <length>10000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Sec03SISReqchange__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sec03SISReqchange</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Sec03TurnaroundStrategyIncluded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sec03TurnaroundStrategyIncluded</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Sec03TurnaroundStrategyOther__c</fullName>
        <label>Sec03TurnaroundStrategyOther</label>
        <length>10000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Sec03TurnaroundStrategy__c</fullName>
        <label>Sec03TurnaroundStrategy</label>
        <picklist>
            <picklistValues>
                <fullName>Turnaround Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Innovation School</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School Management Contract</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Charter Conversion</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Restructure Charter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School Closure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Strategy of Comparable or Greater Effect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Selected</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Sec04DRFeedback__c</fullName>
        <label>Sec04DRFeedback</label>
        <length>10000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Sec04DRReqchange__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sec04DRReqchange</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Sec04FocusFeedback__c</fullName>
        <label>Sec04FocusFeedback</label>
        <length>10000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Sec04FocusReqchange__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sec04FocusReqchange</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Sec04PITAFeedback__c</fullName>
        <label>Sec04PITAFeedback</label>
        <length>10000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Sec04PITARequiredChange__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sec04PITARequiredChange</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Sec04READFeedback__c</fullName>
        <label>Sec04READFeedback</label>
        <length>10000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Sec04READReqchange__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sec04READReqchange</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Sec04SAPFeedback__c</fullName>
        <label>Sec04SAPFeedback</label>
        <length>10000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Sec04SAPReqchange__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sec04SAPReqchange</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Sec04SCTRFeedback__c</fullName>
        <label>Sec04SCTRFeedback</label>
        <length>10000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Sec04SCTRReqchange__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sec04SCTRReqchange</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Sec04SISFeedback__c</fullName>
        <label>Sec04SISFeedback</label>
        <length>10000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Sec04SISReqchange__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sec04SISReqchange</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Sec04TIGLastYearAddressed__c</fullName>
        <label>Sec04TIGLastYearAddressed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partially</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Sec04TurnLastYearAddressed__c</fullName>
        <label>Sec04TurnLastYearAddressed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partially</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Sec04_21Feedback__c</fullName>
        <label>Sec04_21Feedback</label>
        <length>10000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Sec04_21Reqchange__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sec04_21Reqchange</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Sec05READFeedback__c</fullName>
        <label>Sec05READFeedback</label>
        <length>10000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Sec05READReqchange__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sec05READReqchange</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Sec06TIGFeedback__c</fullName>
        <label>Sec06TIGFeedback</label>
        <length>10000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Sec06TIGReqchange__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sec06TIGReqchange</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Sec06TurnLastYearAddressed__c</fullName>
        <label>Sec06TurnLastYearAddressed</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partially</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>Sec06TurnaroundFeedback__c</fullName>
        <label>Sec06TurnaroundFeedback</label>
        <length>10000</length>
        <type>Html</type>
    </fields><fields>
        <fullName>Sec06TurnaroundReqchange__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Sec06TurnaroundReqchange</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Section_Reference__c</fullName>
        <label>Section Reference</label>
        <picklist>
            <picklistValues>
                <fullName>Section III</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section IV</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Addenda</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>SubmitFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SubmitFlag</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Summary_Info__c</fullName>
        <description>Summary Info</description>
        <label>Summary Info</label>
        <picklist>
            <picklistValues>
                <fullName>SummaryInfo_1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SummaryInfo_2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SummaryInfo_3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><fields>
        <fullName>UIP__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>UIP</label>
        <referenceTo>UIP__c</referenceTo>
        <relationshipLabel>CDE Feedback</relationshipLabel>
        <relationshipName>CDE_Feedback</relationshipName>
        <type>Lookup</type>
    </fields><fields>
        <fullName>Urgent_Action__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Urgent Action</label>
        <type>Checkbox</type>
    </fields><fields>
        <fullName>Worksheet_Reference__c</fullName>
        <label>Worksheet Reference</label>
        <picklist>
            <controllingField>Section_Reference__c</controllingField>
            <picklistValues>
                <fullName>Section III: Step One - Brief Description</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section III: Step Two - Prior Year Targets</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section III: Step Three - Current Performance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section IV: Action Plans - School Target Setting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section IV: Action Plans - Planning Form</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section III: Step Four - Trend Analysis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section III: Step Five - Priority Performance Challenges</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Section III: Step Six - Root Causes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableFeeds>false</enableFeeds><enableHistory>true</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><label>CDE Feedback</label><nameField>
        <label>CDE Feedback Name</label>
        <type>Text</type>
    </nameField><pluralLabel>CDE Feedback</pluralLabel><sharingModel>ReadWrite</sharingModel><listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews></CustomObject>